2009-06-12  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/youtube.ui: Fix an errant ID. (Closes: #585518)

2009-06-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c:
	If we have playbin2 from gst-plugins-base 0.10.23.1 or newer use
	the new {audio,video,text}-tags-changed signals for noticing if
	tags have changed. This also gives us immediately the corresponding
	stream id and the type of the stream and makes it unnecessary to
	try to get the type via the tag messages' sender.

	This fixes bug #584689, prevents tags for unused streams to be
	displayed and makes sure that audio/video tags of a demuxer or
	other generic elements are used.

2009-06-07  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c:
	Use gst_message_parse_buffering() instead of manually getting
	the percents from the message.

2009-06-03  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.in:
	* src/plugins/youtube/totem-youtube.c
	(increment_progress_bar_fraction), (query_finished_cb),
	(execute_query): Bump to libgdata >= 0.4.0 to work around
	locale-dependency problems in string parsing. Fix some reference
	problems in the YouTube plugin and hide ugly technical error messages
	from libgdata. (Helps: #584691)

2009-06-03  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/totem-youtube.c (new_from_stream_thread): Fix
	a double-free when downloading YouTube video thumbnails.

2009-05-31  Philip Withnall  <philip@tecnocode.co.uk>

	* docs/reference/Makefile.am: Add the builddir to gtkdoc-mkhtml's
	path so that builddir != srcdir builds work for the documentation.
	(Closes: #581723)

2009-05-19  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bvw_handle_element_message): Fix small compilation warning

2009-05-19  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c