@@ -1,3 +1,10 @@
+2009-06-14  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* src/plugins/youtube/totem-youtube.c (resolve_t_param_cb),
+	(resolve_t_param), (query_progress_cb),
+	(open_in_web_browser_activate_cb): Update YouTube plugin to use
+	libgdata 0.4.0 API. (Closes: #584691)
+
 2009-06-12  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* src/plugins/youtube/youtube.ui: Fix an errant ID. (Closes: #585518)
